--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,56 @@ body{
     background-attachment: fixed;
     background-position: center;
     background-size:100%;
-    text-shadow: 2px 2px white;
+}
+
+.flexbox{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.flexbox2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between
+}
+
+.weather {
+    background-color: white;
+    width: 100;
+    height: 180;
+    border: 2px solid black;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 20;
+}
+
+.quote {
+    background-color: white;
+    width: 100%;
+    height: auto;
+    border: 2px solid black;
+    border-radius: 5px;
+    text-align: center;
+    align-self: flex-end;
+    flex: 1;
+}
+
+.todo {
+    background-color: white;
+    width: auto;
+    height: auto;
+    text-align: left;
+    border: 2px solid black;
+    border-radius: 5px;
+    font-size: 15;
+}
+
+.clock{
+    color: limegreen;
+    font-size: 250;
+    text-align: center;
+     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
