--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body{
 }
 
 .weather {
-    background-color: white;
+    background-color: rgba(255, 255, 255, .4);
     width: 100;
     height: 180;
     border: 2px solid black;
@@ -29,7 +29,7 @@ body{
 }
 
 .quote {
-    background-color: white;
+    background-color: rgba(255, 255, 255, .4);
     width: 100%;
     height: auto;
     border: 2px solid black;
@@ -40,7 +40,7 @@ body{
 }
 
 .todo {
-    background-color: white;
+    background-color: rgba(255, 255, 255, .4);
     width: auto;
     height: auto;
     text-align: left;
@@ -51,8 +51,8 @@ body{
 
 .clock{
     color: limegreen;
-    font-size: 250;
+    font-size: 200;
     text-align: center;
-     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
