--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ body{
     border-radius: 5px;
     text-align: center;
     font-size: 20;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .quote {
@@ -37,6 +38,7 @@ body{
     text-align: center;
     align-self: flex-end;
     flex: 1;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .todo {
@@ -47,6 +49,7 @@ body{
     border: 2px solid black;
     border-radius: 5px;
     font-size: 15;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .clock{
@@ -54,5 +57,6 @@ body{
     font-size: 200;
     text-align: center;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
