--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ body{
     background-attachment: fixed;
     background-position: center;
     background-size:100%;
+    font-family: 'Bigelow Rules', cursive;
 }
 
 .flexbox{
